--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/nl/openbanking/handelsbanken/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/nl/openbanking/handelsbanken/BUILD
@@ -11,6 +11,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/signaturekeypair",
         "//src/integration/payment:rpc",
         "//third_party:com_google_http_client_google_http_client",
+        "//third_party:com_google_inject_guice",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_google_guava_guava",
     ],
