--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/no/banks/danskebank/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/no/banks/danskebank/BUILD
@@ -33,6 +33,7 @@ junit_test(
             "DanskebankNOAgentTest.java",
         ],
     ),
+    data = ["//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/no/banks/danskebank/resources"],
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/danskebank",
