--- a/.charts/tink-backend-aggregation-agents/templates/dk/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/dk/alerts.yaml
@@ -20,7 +20,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -98,7 +98,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.manualLoginActions }}, {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -176,7 +176,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -254,7 +254,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.manualLoginActions }}, {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -332,7 +332,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -410,7 +410,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.manualLoginActions }}, {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -488,7 +488,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -566,7 +566,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.manualLoginActions }}, {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -644,7 +644,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -722,7 +722,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.manualLoginActions }}, {{ .Values.reAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -802,7 +802,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -881,7 +881,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.allLoginActions }}, {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -959,7 +959,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1037,7 +1037,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.allLoginActions }}, {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1115,7 +1115,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1193,7 +1193,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.allLoginActions }}, {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1271,7 +1271,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1349,7 +1349,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.allLoginActions }}, {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1427,7 +1427,7 @@ spec:
         and sum by (provider) (tink_agent_login_total{ {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1505,7 +1505,7 @@ spec:
         and sum by (provider, action) (tink_agent_login_total{ {{ .Values.allLoginActions }}, {{ .Values.obAgents }}, provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1585,7 +1585,7 @@ spec:
          and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1663,7 +1663,7 @@ spec:
          and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1741,7 +1741,7 @@ spec:
          and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
@@ -1819,7 +1819,7 @@ spec:
          and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DK"})  > 10
       for: {{ .Values.p4WaitTimeBeforeFiringAlert }}
       labels:
-        severity: urgent
+        severity: ping
         priority: P4
         who: integration-teletubbies
       annotations:
