--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agents/utils/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agents/utils/BUILD
@@ -5,6 +5,8 @@ java_library(
     deps = [
         "//src/integration/lib:annotations",
         "//third_party:com_google_code_gson_gson",
+        "//third_party:lombok_libs",
+        "//third_party:lombok_plugin",
         "//third_party:org_apache_commons_commons_collections4",
         "//third_party:org_bouncycastle_bcpkix_jdk15on",
         "//third_party:org_json_json",
