feat(es/ruralvia): add identity data and refactor
[IFD-2344]

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ruralvia/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ruralvia/BUILD
@@ -6,6 +6,7 @@ junit_test(
         "fetcher/RuralviaUtilsTest.java",
         "fetcher/account/RuralviaTransactionalAccountFetcherTest.java",
         "fetcher/creditcard/RuralviaCreditCardFetcherTest.java",
+        "fetcher/identitydata/RuralviaIdentityDataFetcherTest.java",
         "fetcher/loan/RuralviaLoanFetcherTest.java",
         "rpc/GlobalPositionResponseTest.java",
     ],
@@ -28,6 +29,7 @@ junit_test(
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
         "//src/integration/enums",
+        "//src/integration/identity_data",
         "//src/integration/lib",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filterable/request",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/response",
