fix(alerts): FR alerts configuration

--- a/.charts/tink-backend-aggregation-agents/templates/fr/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/fr/alerts.yaml
@@ -1,7 +1,7 @@
 kind: RuleGroup
 apiVersion: monitoring.tink.se/v1
 metadata:
-  name: alerts-be
+  name: alerts-fr
   namespace: agents
 spec:
   rules:
