--- a/src/integration/models/BUILD
+++ b/src/integration/models/BUILD
@@ -7,6 +7,8 @@ java_library(
         "//src/libraries/serialization",
         "//src/libraries/strings",
         "//src/libraries/uuid",
+        "//third_party:lombok_libs",
+        "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
         "@aggregation//:com_fasterxml_jackson_core_jackson_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
