--- a/src/libraries/repository/BUILD
+++ b/src/libraries/repository/BUILD
@@ -7,9 +7,11 @@ java_library(
         "//third_party:com_google_code_findbugs_jsr305",
         "//third_party:com_google_inject_guice",
         "//third_party:javax_validation_validation_api",
+        "//third_party:lombok_libs",
         "//third_party:org_hibernate_hibernate_annotations",
         "//third_party:org_hibernate_hibernate_validator",
         "//third_party:org_hibernate_javax_persistence_hibernate_jpa_2_0_api",
+        "//third_party:org_slf4j_slf4j_api",
         "//third_party:org_springframework_data_spring_data_commons",
         "//third_party:org_springframework_data_spring_data_jpa",
         "//third_party:org_springframework_spring_core",
