--- a/.charts/tink-backend-aggregation-agents/templates/fi/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/fi/alerts.yaml
@@ -87,6 +87,25 @@ spec:
           the last hour.
         tags: {{ .Values.tags }}
 
+    - alert: LongTermAuthenticationUnknownErrorRateOver10%FI
+      expr: |
+        # Failed logins (due to unknown RuntimeException) over 10%
+        (count(sum_over_time(tink_agent_login_total{action="login", outcome="failed", market="FI", provider_type!="test"}[6h])) by (className,provider)
+            / count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[6h])) by (className,provider) > 0.1)
+        # At least this many attempts.
+             and count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[6h])) by (className,provider) > 1
+      for: 5m
+      labels:
+        severity: urgent
+        priority: P2
+        who: integration-minions
+      annotations:
+        description: {{ .Values.kibanaLink }}
+          {{ .Values.grafanaLink }}
+        summary: Authentication failures due to unknown RuntimeExceptions is over 10% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 6 hours
+          the last hour.
+        tags: {{ .Values.tags }}
+
     # Refresh alerts
     - alert: RefreshUnknownErrorRateOver10%FI
       expr: |
