--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/uk/openbanking/barclays/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/uk/openbanking/barclays/BUILD
@@ -17,6 +17,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/instrumentation",
         "//third_party:com_google_inject_guice",
         "//third_party:lombok_libs",
+        "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_google_guava_guava",
     ],
 )
