--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/uk/openbanking/santander/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/uk/openbanking/santander/BUILD
@@ -19,6 +19,7 @@ java_library(
         "//third_party:com_google_inject_guice",
         "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang3",
+        "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_google_guava_guava",
     ],
 )
