chore(alerts/RE): alerts adjustments in DK/NO
1. Decreased the thresholds for auth_errors
2. Remove agent errors - they are covered by temporary and
bank errors.
3. Create new type of error - which covers both temporary and bank errors

--- a/.charts/tink-backend-aggregation-agents/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation-agents/values/aggregation-production.yaml
@@ -14,6 +14,7 @@ temporaryErrorsAuth: outcome!~"failed"
 authErrorsAuth: outcome!~"cancelled|cancelled_due_to_third_party_app_timeout"
 bankErrorsAuth: outcome!~"unavailable"
 agentErrorsAuth: outcome!~"failed|cancelled|cancelled_due_to_third_party_app_timeout"
+bankAndTemporaryErrorsAuth: outcome!~"failed|unavailable"
 allErrorsAuth: outcome!~"cancelled|cancelled_due_to_third_party_app_timeout|unavailable|failed"
 
 agentErrorsRefresh: outcome!~"failed"
